@@ -14,11 +14,25 @@
 
 #include "hppCore/hppPlanner.h"
 
+/*
+  Undefine macros mistakenly defined by omniORB
+*/
+#ifdef PACKAGE_BUGREPORT
 #undef PACKAGE_BUGREPORT
+#endif
+#ifdef PACKAGE_NAME
 #undef PACKAGE_NAME
+#endif
+#ifdef PACKAGE_STRING
 #undef PACKAGE_STRING
+#endif
+#ifdef PACKAGE_TARNAME
 #undef PACKAGE_TARNAME
+#endif
+#ifdef PACKAGE_VERSION
 #undef PACKAGE_VERSION
+#endif
+
 #include "hppciObstacleServer.hh"
 
 class ChppciServer;
