@@ -10,11 +10,25 @@
 
 #include <vector>
 
+/*
+  Undefine macros mistakenly defined by omniORB
+*/
+#ifdef PACKAGE_BUGREPORT
 #undef PACKAGE_BUGREPORT
+#endif
+#ifdef PACKAGE_NAME
 #undef PACKAGE_NAME
+#endif
+#ifdef PACKAGE_STRING
 #undef PACKAGE_STRING
+#endif
+#ifdef PACKAGE_TARNAME
 #undef PACKAGE_TARNAME
+#endif
+#ifdef PACKAGE_VERSION
 #undef PACKAGE_VERSION
+#endif
+
 #include "hppciProblemServer.hh"
 
 class ChppciServer;
