@@ -25,11 +25,25 @@ Obstacles are stored in collision lists (CkcdCollisionList) composed of polyhedr
 #include "hppCore/hppPlanner.h"
 #include "hppModel/hppBody.h"
 
+/*
+  Undefine macros mistakenly defined by omniORB
+*/
+#ifdef PACKAGE_BUGREPORT
 #undef PACKAGE_BUGREPORT
+#endif
+#ifdef PACKAGE_NAME
 #undef PACKAGE_NAME
+#endif
+#ifdef PACKAGE_STRING
 #undef PACKAGE_STRING
+#endif
+#ifdef PACKAGE_TARNAME
 #undef PACKAGE_TARNAME
+#endif
+#ifdef PACKAGE_VERSION
 #undef PACKAGE_VERSION
+#endif
+
 #include "hppciRobotServer.hh"
 
 #include "KineoKCDModel/kppKCDPolyhedron.h"
